--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -11,25 +11,36 @@
     app:cardElevation="2dp">
 
     <LinearLayout
+        android:id="@+id/product_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
        >
        <LinearLayout
-           android:layout_width="wrap_content"
+           android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
-           android:layout_gravity="right">
+           android:gravity="right"
+           android:paddingTop="3dp"
+           android:paddingBottom="3dp">
+
+           <TextView
+               android:id="@+id/prodPrice"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Product Code:"
+               android:textSize="18sp"
+               android:textStyle="bold"
+               android:layout_marginRight="90dp"
+               android:textColor="@color/colorAccent"/>
 
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Product Code:"
                android:textSize="18sp"
-               android:layout_marginTop="5dp"
-               android:layout_marginRight="5dp"
                android:textStyle="bold"
-               android:layout_gravity="right"
+
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:id="@+id/prodCode"
@@ -37,10 +48,7 @@
                android:layout_height="wrap_content"
                android:text="sample"
                android:textSize="18sp"
-               android:layout_marginTop="5dp"
-               android:layout_marginRight="5dp"
                android:textStyle="bold"
-               android:layout_gravity="right"
                android:textColor="@color/colorAccent"/>
 
        </LinearLayout>
