--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="3dp"
+    android:layout_marginTop="7dp"
     android:layout_marginLeft="3dp"
     android:layout_marginRight="3dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -26,12 +26,13 @@
 
            <TextView
                android:id="@+id/prodPrice"
-               android:layout_width="wrap_content"
+               android:layout_width="100dp"
                android:layout_height="wrap_content"
-               android:text="Product Code:"
+               android:text="$1000.00"
                android:textSize="18sp"
                android:textStyle="bold"
-               android:layout_marginRight="90dp"
+               android:layout_marginRight="25dp"
+               android:textAlignment="center"
                android:textColor="@color/colorAccent"/>
 
            <TextView
@@ -40,15 +41,15 @@
                android:text="Product Code:"
                android:textSize="18sp"
                android:textStyle="bold"
-
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:id="@+id/prodCode"
-               android:layout_width="wrap_content"
+               android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="sample"
                android:textSize="18sp"
                android:textStyle="bold"
+               android:textAlignment="center"
                android:textColor="@color/colorAccent"/>
 
        </LinearLayout>
@@ -107,6 +108,21 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="3dp" />
         </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginBottom="2dp"
+            android:background="@color/colorPrimaryDark"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="VIEW PRODUCT"
+            android:layout_gravity="center_horizontal"
+            android:textStyle="bold"
+            android:textSize="15sp"
+             android:layout_marginBottom="5dp"
+            android:textColor="@color/colorAccent"/>
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
