--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -10,119 +10,34 @@
     app:cardCornerRadius="3dp"
     app:cardElevation="2dp">
 
-    <LinearLayout
-        android:id="@+id/product_container"
+    <RelativeLayout
+        android:id="@+id/containerlayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-       >
-       <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:orientation="horizontal"
-           android:gravity="right"
-           android:paddingTop="3dp"
-           android:paddingBottom="3dp">
+        android:layout_height="wrap_content">
 
-           <TextView
-               android:id="@+id/prodPrice"
-               android:layout_width="100dp"
-               android:layout_height="wrap_content"
-               android:text="$1000.00"
-               android:textSize="18sp"
-               android:textStyle="bold"
-               android:layout_marginRight="25dp"
-               android:textAlignment="center"
-               android:textColor="@color/colorAccent"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
+        android:layout_centerHorizontal="true"
+        android:src="@mipmap/ic_launcher"
+        android:id="@+id/prodImgView" />
 
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="Product Code:"
-               android:textSize="18sp"
-               android:textStyle="bold"
-               android:textColor="@color/colorPrimaryDark"/>
-           <TextView
-               android:id="@+id/prodCode"
-               android:layout_width="100dp"
-               android:layout_height="wrap_content"
-               android:text="sample"
-               android:textSize="18sp"
-               android:textStyle="bold"
-               android:textAlignment="center"
-               android:textColor="@color/colorAccent"/>
-
-       </LinearLayout>
-        <View
+        <me.grantland.widget.AutofitTextView
+            android:id="@+id/prodName"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="2dp"
-            android:background="@color/colorPrimaryDark"/>
-        <LinearLayout
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="3dp">
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/prodImgView"
+            android:layout_marginTop="14dp"
+            android:gravity="center_vertical"
+            android:text="CHEESE BURGER WITH EGG AND CHEESE"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:layout_marginBottom="10dp"
+            app:minTextSize="13sp"
+            android:textStyle="bold"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="7dp"
-                android:layout_marginTop="2dp"
-                android:text="Product Name:"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-            <TextView
-                android:id="@+id/prodName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Product Name"
-                android:textSize="20sp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="3dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="10dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="7dp"
-                android:layout_marginTop="2dp"
-                android:text="Product Description:"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-            <TextView
-                android:id="@+id/prodDes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Product Description"
-                android:textStyle="italic"
-                android:textSize="15sp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="3dp" />
-        </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="2dp"
-            android:background="@color/colorPrimaryDark"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="VIEW PRODUCT"
-            android:layout_gravity="center_horizontal"
-            android:textStyle="bold"
-            android:textSize="15sp"
-             android:layout_marginBottom="5dp"
-            android:textColor="@color/colorAccent"/>
-
-    </LinearLayout>
-
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
