--- a/app/src/main/res/layout/list_cart.xml
+++ b/app/src/main/res/layout/list_cart.xml
@@ -1,5 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="200dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="5dip"
+    android:padding="5dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginLeft="5dp">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="145dp"
+            android:layout_height="130dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/view3"
+            android:layout_marginTop="11dp"
+            android:src="@mipmap/ic_launcher" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/imageView"
+            android:layout_marginTop="11dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:background="@color/colorPrimaryDark"
+            android:id="@+id/view3" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/textView12"
+            android:layout_alignTop="@+id/imageView"
+            android:layout_marginTop="21dp"
+            android:text="Name:" />
+
+        <me.grantland.widget.AutofitTextView
+            android:id="@+id/cartName"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/textView10"
+            android:layout_alignEnd="@+id/view3"
+            android:gravity="center"
+            android:text="Product"
+            android:textAlignment="center"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:minTextSize="2sp" />
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/textView13"
+            android:layout_marginBottom="14dp"
+            android:layout_toStartOf="@+id/cartAmount"
+            android:text="Amount:" />
+
+        <TextView
+            android:id="@+id/cartAmount"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textView12"
+            android:layout_alignBottom="@+id/textView12"
+            android:layout_alignParentEnd="true"
+            android:text="$1000.00"
+            android:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/textView13"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/view3"
+            android:layout_alignStart="@+id/textView12"
+            android:layout_marginBottom="11dp"
+            android:text="No. of Order:" />
+
+        <TextView
+            android:id="@+id/cartItems"
+            android:layout_width="125dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textView13"
+            android:layout_alignBottom="@+id/textView13"
+            android:layout_alignParentEnd="true"
+            android:text="15 items"
+            android:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/btnTransact"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="20dp"
+            android:layout_below="@+id/view3"
+            android:text="TRANSACT"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/btnEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/btnTransact"
+            android:layout_alignBottom="@+id/btnTransact"
+            android:layout_toStartOf="@+id/cartAmount"
+            android:text="EDIT"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/notifProcess"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/btnTransact"
+            android:layout_alignBottom="@+id/btnTransact"
+            android:layout_centerHorizontal="true"
+            android:text="ON PROCESS......"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/btnDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/btnTransact"
+            android:layout_alignBottom="@+id/btnTransact"
+            android:layout_alignEnd="@+id/view3"
+            android:layout_marginEnd="17dp"
+            android:text="DELETE"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+
+
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
