--- a/app/src/main/res/layout/dialog_account.xml
+++ b/app/src/main/res/layout/dialog_account.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="In order to continue to process your ordered Product you must fill out the account information"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:textSize="15sp"
+        android:layout_marginTop="5dp"
+        android:paddingRight="3dp"
+        android:paddingLeft="3dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display3"
+        android:textStyle="bold"/>
+
+
+</LinearLayout>
