--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -1,15 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.jhomasinas.kotlinproject1.Fragment.BlankFragment">
+    android:layout_height="match_parent">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="To process your items you must fill the customer information"
         android:textAlignment="center"
-        android:padding="3dp"
+        android:padding="10dp"
         android:textSize="15sp"
         android:id="@+id/textView14" />
 
@@ -27,31 +26,33 @@
         android:textStyle="italic"
         android:id="@+id/textView15" />
 
-    <RadioButton
-        android:id="@+id/radioButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <RadioGroup
         android:layout_alignStart="@+id/textView15"
+        android:id="@+id/radioGroup1"
         android:layout_below="@+id/textView15"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="11dp"
-        android:text="Cash on Delivery" />
-
-    <RadioButton
-        android:id="@+id/radioButton2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/radioButton"
-        android:layout_alignBottom="@+id/radioButton"
-        android:layout_marginStart="29dp"
-        android:layout_toEndOf="@+id/textView15"
-        android:text="Remittance" />
+        android:orientation="horizontal">
+        <RadioButton
+            android:id="@+id/radCash"
+            android:layout_marginLeft="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cash On Delivery"
+            />
+        <RadioButton
+            android:id="@+id/radRemit"
+            android:layout_marginLeft="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Remittance"/>
+    </RadioGroup>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/textView15"
-        android:layout_below="@+id/radioButton"
+        android:layout_below="@+id/radioGroup1"
         android:layout_marginTop="24dp"
         android:text="Remittance Payment Information"
         android:textSize="14sp"
@@ -90,35 +91,37 @@
         android:id="@+id/textView21"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/radioButton"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/textView20"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="15dp"
         android:text="UNIT 101 Ermin Garcia St. Cubao, Quezon City"
         android:textSize="14sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView22"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/textView20"
-        android:layout_centerVertical="true"
-        android:text="Author Person"
+        android:layout_below="@+id/textView21"
+        android:layout_marginTop="11dp"
+        android:text="Authorized Person"
         android:textSize="14sp"
         android:textStyle="italic" />
 
     <TextView
         android:id="@+id/textView23"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView21"
+        android:layout_below="@+id/textView22"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="42dp"
-        android:text="Mr. Jhomari Asinas
-Sales Head"
+        android:layout_marginTop="16dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:text="Mr. Jhomari Asinas Sales Head"
         android:textAlignment="center"
         android:textSize="15sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView25"
@@ -126,18 +129,19 @@ Sales Head"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/textView22"
         android:layout_below="@+id/textView23"
+        android:layout_marginTop="11dp"
         android:text="Contact No."
         android:textSize="14sp"
         android:textStyle="italic" />
 
     <TextView
         android:id="@+id/textView26"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView25"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="12dp"
-        android:text="09210255377"
+        android:layout_marginTop="11dp"
+        android:text="+639210255377(Smart)+639265264753(Globe)"
         android:textAlignment="center"
         android:textSize="15sp"
         android:textStyle="bold" />
@@ -154,11 +158,12 @@ Sales Head"
         android:id="@+id/view5" />
 
     <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/view5"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"
+        android:layout_marginBottom="14dp"
         android:background="@color/colorAccent"
         android:padding="10dp"
         android:text="Proceed to Customer Information"
