--- a/app/src/main/res/layout/fragment_transact.xml
+++ b/app/src/main/res/layout/fragment_transact.xml
@@ -26,43 +26,28 @@
         android:id="@+id/textInputLayout5">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/customerName"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:hint="Enter Your Fullname(firstname/middlename/lastname)"
-            android:textSize="12sp"/>
+            android:hint="Fullname(F/M/L)"
+            android:textSize="20sp"/>
     </android.support.design.widget.TextInputLayout>
-
-    <TextView
-        android:id="@+id/textView18"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView17"
-        android:layout_below="@+id/textInputLayout5"
-        android:text="Full Address"
-        android:textSize="15dp"/>
-
-    <TextView
-        android:id="@+id/textView19"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView17"
-        android:layout_alignTop="@+id/textInputLayout5"
-        android:text="Full Name" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView18"
+        android:layout_below="@+id/textInputLayout5"
         android:layout_centerHorizontal="true"
         android:paddingRight="10dp"
         android:paddingLeft="10dp"
         android:id="@+id/textInputLayout6">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/customerStreet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Blk no./Street no./Subdivision/Village"
-            android:textSize="12sp"/>
+            android:textSize="20sp"/>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -76,39 +61,32 @@
         android:id="@+id/textInputLayout7">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/customerState"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="State/Province"
-            android:textSize="12sp"/>
+            android:textSize="20sp"/>
     </android.support.design.widget.TextInputLayout>
-
-    <TextView
-        android:id="@+id/textView24"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/textView18"
-        android:layout_below="@+id/textInputLayout7"
-        android:layout_marginTop="16dp"
-        android:text="Contact No."
-        android:textSize="15sp" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView24"
+        android:layout_below="@+id/textInputLayout7"
         android:layout_centerHorizontal="true"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:id="@+id/textInputLayout8">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/customerNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Mobile Number/Telephone Number"
-            android:textSize="12sp"/>
+            android:textSize="20sp"/>
     </android.support.design.widget.TextInputLayout>
 
     <Button
+        android:id="@+id/saveCustomer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textInputLayout8"
